# template-python

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/rye/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
src/template_python/: __init__.py
