[project]
name = "template-python"
version = "0.1.0"
description = "A template project for Python"
authors = [{ name = "yoseio", email = "yoseio@brainoid.dev" }]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = []

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "pyright>=1.1.377",
    "ruff>=0.6.2",
]

[tool.rye.scripts]
check = { chain = ["ruff-check", "pyright"] }
format = { chain = ["ruff-sort", "ruff-format"] }

pyright = "pyright"
ruff-check = "ruff check . --preview"
ruff-format = "ruff format  . --preview"
ruff-sort = "ruff check --select I --fix . --preview"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/template_python"]
